# gauche-bdb

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.in  Makefile.in.real  NEWS  README  auto  bdb-lib.c  bdb-lib.h  bdb.scm  bdb.stub  bdb_head.c  build.sh  configure.ac  configure.in  gauche-subst-version  gauche.cmake  todo.stub
bdb/: handy.scm  pg.scm
dbm/: bdbm.scm
debian/: changelog  control  control.in  rules
scm/: bdb-hi.scm  bdb.scm
scm/bdb/: handy.scm  pg.scm
scm/test/: examples.scm  useless.scm
test/: test.db  test.scm
